Wrap Bug Fixed

--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -71,11 +71,10 @@ header{
 }
 
 .features{
-    padding: 0 10%;
     display: flex;
     flex-direction: column;
     color: $black-light;
-    min-width: 62.5%;
+    margin: auto;
     // TODO
     hr{
         width: 150px;
@@ -101,12 +100,11 @@ header{
 
     .features-cards{
         display: flex;
-        flex-direction: row;
-        
-
+        flex-wrap: wrap;
+        justify-items: center;
+        justify-content: center;
         margin: auto;
         margin-bottom: 220px;
-        min-width: 805px;
         .feature-card{
             width: 255px;
             min-height: 390px;
